cicd: fix android build

--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -1,9 +1,8 @@
-ame: GitHub Action sample
+name: android build
 
 on:
   push:
-    branches:
-      - master
+    branches: [ master ]
 
 jobs:
   android_job:
